# edge-processing-remote-sensing

./: .gitignore  Dockerfile  LICENSE  README.md  data_exploration.ipynb  pyproject.toml  requirements.txt  setup.py
notebooks/: data_exploration.ipynb
notebooks/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
src/app/: main.py
src/data/: augmentation.py  preprocessing.py
src/mlruns/0/: meta.yaml
src/mlruns/0/39476ccc86eb4d1da328446b792e2aed/: meta.yaml
src/mlruns/0/39476ccc86eb4d1da328446b792e2aed/metrics/: val_accuracy
src/mlruns/0/39476ccc86eb4d1da328446b792e2aed/params/: dropout_rate  learning_rate
src/mlruns/0/39476ccc86eb4d1da328446b792e2aed/tags/: mlflow.runName  mlflow.source.name
src/mlruns/0/9df040276fd945d78bb30b6ec6a37e07/: meta.yaml
src/mlruns/0/9df040276fd945d78bb30b6ec6a37e07/metrics/: val_accuracy
src/mlruns/0/9df040276fd945d78bb30b6ec6a37e07/params/: dropout_rate  learning_rate
src/mlruns/0/9df040276fd945d78bb30b6ec6a37e07/tags/: mlflow.runName  mlflow.source.git.commit
src/model/: architecture.py  data_preparation.py  model.py  schema.py  train.py
src/pipeline/: pipeline.py
tests/: test_augmentation.py  test_data_preprocessing.py
